--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,8 @@ html {
   scroll-margin-top: 80px;
   scroll-padding-top: 80px;
 }
+
+#contact {
+  scroll-margin-top: 80px;
+  scroll-padding-top: 80px;
+}
